se corrije icono de whatsapp

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </section>
         </section>
     </main>
-    <div class="whatsapp">
+    <div id="whatsapp">
         <a href="https://wa.me/+5493516974598" target="_blank"><i id="iconowhatsapp"
                 class="fa-brands fa-whatsapp"></i></a>
     </div>
