--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JV Shine Car Detail</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="icon" href="img/icologo.png">
@@ -54,18 +58,43 @@
 
     <main>
 
-        <h1 class="titulo">Inicio</h1>
+        <!--<h1 class="titulo">Inicio</h1>-->
         <section class="index">
-            <div class="imgPrincipal">
-                <img class="porche" src="img/porche.jpg" alt="porche">
-            </div>
+            <!--Inicio carrusel-->
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="img/voyageportada.jpg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/sanderoportada.jpg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/golnegroportada.jpg" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            <!--Fin carrusel-->
             <div class="info">
-                <h2 class="tituloIndex">Deja tu Vehiculo como nuevo.</h2>
-                <p class="inicio">Con nuestro servicio de detailing podras darle ese brillo que siempre quisiste,
+                <h2  class="animate__animated animate__fadeInUp tituloIndex">Deja tu Vehiculo como nuevo</h2>
+                <p class="animate__animated animate__fadeInUp inicio">Con nuestro servicio de detailing podras darle ese brillo que siempre quisiste,
                     contamos con un grupo de profesionales capacitados para la restauracion y proteccion de automoviles.
                 </p>
             </div>
-            <h2 class="tituloMarcas">Trabajamos con las mejores marcas</h2>
+            <h2 class="animate__animated animate__fadeInUp tituloMarcas">Trabajamos con las mejores marcas</h2>
             <div class="marcas">
 
                 <div class="img2 imgMarcas">
@@ -88,15 +117,15 @@
 
             <section class="contenedorReseñas">
                 <div class="reseñas">
-                    <h2 class="tituloIndex">Reseñas</h2>
+                    <h2 class="tituloReseñas">Reseñas</h2>
                     <p class="textoreseñas">Lorem ipsum dolor sit amet consectetur adipisicing elit. In id totam
                         cupiditate eius. Enim aut laborum sit excepturi eaque dolore?</p>
                 </div>
             </section>
         </section>
     </main>
-    <div id="whatsapp">
-        <a href="https://wa.me/+5493516974598" target="_blank"><i id="iconowhatsapp"
+    <div id="whatsapp" >
+        <a  href="https://wa.me/+5493516974598" target="_blank"><i id="iconowhatsapp"
                 class="fa-brands fa-whatsapp"></i></a>
     </div>
     <footer>
