se corrije animaciones y carrousel

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
               </div>
             <!--Fin carrusel-->
             <div class="info">
-                <h2  class="animate__animated animate__fadeInUp tituloIndex">Deja tu Vehiculo como nuevo</h2>
-                <p class="animate__animated animate__fadeInUp inicio">Con nuestro servicio de detailing podras darle ese brillo que siempre quisiste,
+                <h2  class="tituloIndex">Deja tu Vehiculo como nuevo</h2>
+                <p class="inicio">Con nuestro servicio de detailing podras darle ese brillo que siempre quisiste,
                     contamos con un grupo de profesionales capacitados para la restauracion y proteccion de automoviles.
                 </p>
             </div>
-            <h2 class="animate__animated animate__fadeInUp tituloMarcas">Trabajamos con las mejores marcas</h2>
+            <h2 class="tituloMarcas">Trabajamos con las mejores marcas</h2>
             <div class="marcas">
 
                 <div class="img2 imgMarcas">
