--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JV Shine Car Detail</title>
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="icon" href="img/icologo.png">
@@ -63,54 +60,53 @@
             <!--Inicio carrusel-->
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/voyageportada.jpg" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="img/sanderoportada.jpg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="img/golnegroportada.jpg" alt="Third slide">
-                  </div>
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="img/voyageportada.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/sanderoportada.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/golnegroportada.jpg" alt="Third slide">
+                    </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
                 </a>
-              </div>
+            </div>
             <!--Fin carrusel-->
             <div class="info">
-                <h2  class="tituloIndex">Deja tu Vehiculo como nuevo</h2>
-                <p class="inicio">Con nuestro servicio de detailing podras darle ese brillo que siempre quisiste,
-                    contamos con un grupo de profesionales capacitados para la restauracion y proteccion de automoviles.
+                <h2 class="tituloIndex">Deja tu Vehiculo como nuevo</h2>
+                <p class="inicio">Con nuestro servicio de detailing podras darle ese brillo que siempre quisiste, contamos con un grupo de profesionales capacitados para la restauracion y proteccion de automoviles.
                 </p>
             </div>
             <h2 class="tituloMarcas">Trabajamos con las mejores marcas</h2>
             <div class="marcas">
 
                 <div class="img2 imgMarcas">
-                    <img src="img/DEWALT.jpg" alt="">
+                    <img src="img/DEWALT.jpg" alt="dewalt">
                 </div>
                 <div class="img3 imgMarcas">
-                    <img src="img/rupes.jpg" alt="">
+                    <img src="img/rupes.jpg" alt="rupes">
                 </div>
                 <div class="img4 imgMarcas">
-                    <img src="img/toxic.jpg" alt="">
+                    <img src="img/toxic.jpg" alt="toxic">
                 </div>
                 <div class="img5 imgMarcas">
-                    <img src="img/sonax.png" alt="">
+                    <img src="img/sonax.png" alt="sonax">
                 </div>
                 <div class="img1 imgMarcas">
-                    <img src="img/kochchemie.png" alt="">
+                    <img src="img/kochchemie.png" alt="kochchemie">
                 </div>
 
             </div>
@@ -124,8 +120,8 @@
             </section>
         </section>
     </main>
-    <div id="whatsapp" >
-        <a  href="https://wa.me/+5493516974598" target="_blank"><i id="iconowhatsapp"
+    <div id="whatsapp">
+        <a href="https://wa.me/+5493516974598" target="_blank"><i id="iconowhatsapp"
                 class="fa-brands fa-whatsapp"></i></a>
     </div>
     <footer>
