se agrega mapas, extend,  mixin y keywords

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="empresa dedicada a darle brillo y proteccion a  vehiculos de toda gama">
+    <meta name="keywords" content="detailing, detallado, estetica vehicular, abrillantado, proteccion, pintura, toxic shine, brillo, cuidado, restauracion">
+    <meta name="language" content="spanish">
+    <meta name="country" content="argentina">
+    <meta name="city" content="cordoba">
     <title>JV Shine Car Detail</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
@@ -27,26 +32,26 @@
     <nav class="navbar navbar-expand-md  navbar-dark">
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
+            <span id="navegacion" class="navbar-toggler-icon"></span>
         </button>
 
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Inicio</a>
+                    <a id="navegacion" class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="trabajos.html">Trabajos</a>
+                    <a id="navegacion" class="nav-link" href="trabajos.html">Trabajos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    <a id="navegacion" class="nav-link" href="nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="servicios.html">Servicios</a>
+                    <a id="navegacion" class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a id="navegacion" class="nav-link" href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -54,8 +59,7 @@
     <!--fin navbar-->
 
     <main>
-
-        <!--<h1 class="titulo">Inicio</h1>-->
+        <h1>Inicio</h1>
         <section class="index">
             <!--Inicio carrusel-->
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
