--- a/trabajos.html
+++ b/trabajos.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="empresa, detailing, detallado, estetica vehicular, abrillantado, proteccion, pintura, toxic shine, brillo, cuidado, autos, imagenes, taller">
+    <meta name="language" content="spanish">
+    <meta name="country" content="argentina">
+    <meta name="city" content="cordoba">
     <title>JV Shine Car Detail</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -53,23 +57,25 @@
     <!--fin navbar-->
     <main class="imagenes">
         <h1>Nuestros trabajos</h1>
+        <div class= "margenTablet margenDesktop">
         <div class="galeria">
             <img class="trabajos img1" src="img/sanderors.jpg" alt="sandero rs">
-            <img class="trabajos img2" src="img/sanderors2.jpg" alt="gol trend">
-            <img class="trabajos img3" src="img/sanderors3.jpg" alt="gol power">
-            <img class="trabajos img4" src="img/sanderors4.jpg" alt="">
-            <img class="trabajos img5" src="img/sanderors5.jpg" alt="">
-            <img class="trabajos img6" src="img/gol.jpg" alt="">
-            <img class="trabajos img7" src="img/gol2.jpg" alt="">
-            <img class="trabajos img8" src="img/gol3.jpg" alt="">
-            <img class="trabajos img9" src="img/golnegro.jpg" alt="">
-            <img class="trabajos img10" src="img/golnegro2.jpg" alt="">
-            <img class="trabajos img11" src="img/golnegro3.jpg" alt="">
-            <img class="trabajos img12" src="img/golnegro4.jpg" alt="">
-            <img class="trabajos img13" src="img/voyage.jpg" alt="">
-            <img class="trabajos img14" src="img/voyage2.jpg" alt="">
-            <img class="trabajos img15" src="img/voyage3.jpg" alt="">
+            <img class="trabajos img2" src="img/sanderors2.jpg" alt="sandero 2">
+            <img class="trabajos img3" src="img/sanderors3.jpg" alt="sandero 3">
+            <img class="trabajos img4" src="img/sanderors4.jpg" alt="sandero 4">
+            <img class="trabajos img5" src="img/sanderors5.jpg" alt="sandero 5">
+            <img class="trabajos img6" src="img/gol.jpg" alt="gol">
+            <img class="trabajos img7" src="img/gol2.jpg" alt="gol">
+            <img class="trabajos img8" src="img/gol3.jpg" alt="gol">
+            <img class="trabajos img9" src="img/golnegro.jpg" alt="gol negro">
+            <img class="trabajos img10" src="img/golnegro2.jpg" alt="gol negro">
+            <img class="trabajos img11" src="img/golnegro3.jpg" alt="gol negro">
+            <img class="trabajos img12" src="img/golnegro4.jpg" alt="gol negro">
+            <img class="trabajos img13" src="img/voyage.jpg" alt="voyage">
+            <img class="trabajos img14" src="img/voyage2.jpg" alt="voyage">
+            <img class="trabajos img15" src="img/voyage3.jpg" alt="voyage">
         </div>
+    </div>
     </main>
     <div id="whatsapp">
         <a href="https://wa.me/+5493516974598" target="_blank"><i id="iconowhatsapp"
