--- a/nosotros.html
+++ b/nosotros.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="detailing, detallado, estetica vehicular, abrillantado, proteccion, pintura, toxic shine, brillo, cuidado">
+    <meta name="language" content="spanish">
+    <meta name="country" content="argentina">
+    <meta name="city" content="cordoba">
     <title>JV Shine Car Detail</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
