se corrijieron titulos

--- a/trabajos.html
+++ b/trabajos.html
@@ -9,7 +9,7 @@
     <meta name="language" content="spanish">
     <meta name="country" content="argentina">
     <meta name="city" content="cordoba">
-    <title>JV Shine Car Detail</title>
+    <title>Trabajos | JV Shine Car Detail</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="icon" href="img/icologo.png">
@@ -56,7 +56,9 @@
     </nav>
     <!--fin navbar-->
     <main class="imagenes">
-        <h1>Nuestros trabajos</h1>
+        <div class="sign">
+            <span>t</span><span class="fast-flicker">r</span>ab<span class="flicker">a</span>jos
+          </div>
         <div class= "margenTablet margenDesktop">
         <div class="galeria">
             <img class="trabajos img1" src="img/sanderors.jpg" alt="sandero rs">
@@ -83,21 +85,22 @@
     </div>
     <footer>
 
-        <div class="redes">
-            <h3>Seguinos en nuestras redes:</h3>
-            <a href="https://www.facebook.com/JVshinecardetail" target="_blank"><i
-                    class="fa-brands fa-facebook-square"></i></a>
-            <a href=""><i class="fa-brands fa-instagram-square"></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
-        </div>
-        <div class="bloquemapa">
-            <h3>Visitanos en:</h3>
-            <iframe class="mapa"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.5967141857936!2d-64.17090798255614!3d-31.37010619999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329835c810c20b%3A0x430d209e924d3759!2sJuan%20Casacuberta%202953%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1648126119844!5m2!1ses!2sar"
-                width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
+        <footer>
 
-    </footer>
+            <div class="redes">
+                <a href="https://www.facebook.com/JVshinecardetail" target="_blank"><i
+                        class="fa-brands fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/jv_shine.car.detail/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+            </div>
+            <div class="bloquemapa">
+                <h3><i class="fa-solid fa-location-dot"></i> Juan Casacuberta, 2953.</h3>
+                <iframe class="mapa"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.5967141857936!2d-64.17090798255614!3d-31.37010619999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329835c810c20b%3A0x430d209e924d3759!2sJuan%20Casacuberta%202953%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1648126119844!5m2!1ses!2sar"
+                    width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+    
+        </footer>
     <p class="derechos">Todos los derechos reservados.</p>
     <!--inicio separate-->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
