--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="empresa dedicada a darle brillo y proteccion a  vehiculos de toda gama">
-    <meta name="keywords" content="detailing, detallado, estetica vehicular, abrillantado, proteccion, pintura, toxic shine, brillo, cuidado, restauracion">
+    <meta name="keywords"
+        content="detailing, detallado, estetica vehicular, abrillantado, proteccion, pintura, toxic shine, brillo, cuidado, restauracion">
     <meta name="language" content="spanish">
     <meta name="country" content="argentina">
     <meta name="city" content="cordoba">
@@ -59,7 +60,9 @@
     <!--fin navbar-->
 
     <main>
-        <h1>Inicio</h1>
+        <div class="sign">
+            <span></span><span class="fast-flicker">i</span>ni<span class="flicker">c</span>io
+        </div>
         <section class="index">
             <!--Inicio carrusel-->
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -91,7 +94,8 @@
             <!--Fin carrusel-->
             <div class="info">
                 <h2 class="tituloIndex">Deja tu Vehiculo como nuevo</h2>
-                <p class="inicio">Con nuestro servicio de detailing podras darle ese brillo que siempre quisiste, contamos con un grupo de profesionales capacitados para la restauracion y proteccion de automoviles.
+                <p class="inicio">Con nuestro servicio de detailing podras darle ese brillo que siempre quisiste,
+                    contamos con un grupo de profesionales capacitados para la restauracion y proteccion de automoviles.
                 </p>
             </div>
             <h2 class="tituloMarcas">Trabajamos con las mejores marcas</h2>
@@ -131,14 +135,13 @@
     <footer>
 
         <div class="redes">
-            <h3>Seguinos en nuestras redes:</h3>
             <a href="https://www.facebook.com/JVshinecardetail" target="_blank"><i
                     class="fa-brands fa-facebook-square"></i></a>
-            <a href=""><i class="fa-brands fa-instagram-square"></i></a>
+            <a href="https://www.instagram.com/jv_shine.car.detail/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
             <a href=""><i class="fa-brands fa-youtube"></i></a>
         </div>
         <div class="bloquemapa">
-            <h3>Visitanos en:</h3>
+            <h3><i class="fa-solid fa-location-dot"></i> Juan Casacuberta, 2953.</h3>
             <iframe class="mapa"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.5967141857936!2d-64.17090798255614!3d-31.37010619999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329835c810c20b%3A0x430d209e924d3759!2sJuan%20Casacuberta%202953%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1648126119844!5m2!1ses!2sar"
                 width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
