--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="country" content="argentina">
     <meta name="city" content="cordoba">
     <title>JV Shine Car Detail</title>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -32,7 +33,7 @@
     <!--inicio navbar-->
     <nav class="navbar navbar-expand-md  navbar-dark">
         <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span id="navegacion" class="navbar-toggler-icon"></span>
         </button>
 
@@ -120,10 +121,71 @@
             </div>
 
             <section class="contenedorReseñas">
-                <div class="reseñas">
-                    <h2 class="tituloReseñas">Reseñas</h2>
-                    <p class="textoreseñas">Lorem ipsum dolor sit amet consectetur adipisicing elit. In id totam
-                        cupiditate eius. Enim aut laborum sit excepturi eaque dolore?</p>
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/rRNvWR3N2pM" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div id="reseñas" class="col-lg-10 offset-lg-1 pt-5 pb-5 bg-dark text-light">
+                    <div id="client-testimonial-carousel" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active text-center p-4">
+                                <blockquote class="blockquote text-center">
+                                    <p class="mb-0"><i class="fa fa-quote-left"></i> Excelente trabajo, muy
+                                        recomendable.
+                                    </p>
+                                    <span class="blockquote-footer">SOLEDAD <cite title="Source Title"></cite></span>
+                                    <!-- Client review stars -->
+                                    <!-- "fas fa-star" for a full star, "far fa-star" for an empty star, "far fa-star-half-alt" for a half star. -->
+                                    <p class="client-review-stars">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item text-center p-4">
+                                <blockquote class="blockquote text-center">
+                                    <p class="mb-0"><i class="fa fa-quote-left"></i> Espectacular trabajo y muy buenos
+                                        precios.
+                                    </p>
+                                    <span class="blockquote-footer">LUCAS<cite title="Source Title"></cite></span>
+                                    <!-- Client review stars -->
+                                    <!-- "fas fa-star" for a full star, "far fa-star" for an empty star, "far fa-star-half-alt" for a half star. -->
+                                    <p class="client-review-stars">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </p>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item text-center p-4">
+                                <blockquote class="blockquote text-center">
+                                    <p class="mb-0"><i class="fa fa-quote-left"></i>Muy buen servicio y rapido, super
+                                        recomendable.</p>
+                                    <span class="blockquote-footer">MARIA<cite title="Source Title"></cite></span>
+                                    <!-- Client review stars -->
+                                    <!-- "fas fa-star" for a full star, "far fa-star" for an empty star, "far fa-star-half-alt" for a half star. -->
+                                    <p class="client-review-stars">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                    </p>
+                                </blockquote>
+                            </div>
+                        </div>
+                        <ol class="carousel-indicators">
+                            <li data-target="#client-testimonial-carousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#client-testimonial-carousel" data-slide-to="1"></li>
+                            <li data-target="#client-testimonial-carousel" data-slide-to="2"></li>
+                        </ol>
+                    </div>
                 </div>
             </section>
         </section>
@@ -137,7 +199,8 @@
         <div class="redes">
             <a href="https://www.facebook.com/JVshinecardetail" target="_blank"><i
                     class="fa-brands fa-facebook-square"></i></a>
-            <a href="https://www.instagram.com/jv_shine.car.detail/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
+            <a href="https://www.instagram.com/jv_shine.car.detail/" target="_blank"><i
+                    class="fa-brands fa-instagram-square"></i></a>
             <a href=""><i class="fa-brands fa-youtube"></i></a>
         </div>
         <div class="bloquemapa">
