--- a/trabajos.html
+++ b/trabajos.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="empresa, detailing, detallado, estetica vehicular, abrillantado, proteccion, pintura, toxic shine, brillo, cuidado, autos, imagenes, taller">
+    <meta name="keywords"
+        content="empresa, detailing, detallado, estetica vehicular, abrillantado, proteccion, pintura, toxic shine, brillo, cuidado, autos, imagenes, taller">
     <meta name="language" content="spanish">
     <meta name="country" content="argentina">
     <meta name="city" content="cordoba">
@@ -29,27 +30,27 @@
     <!--inicio navbar-->
     <nav class="navbar navbar-expand-md  navbar-dark">
         <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
+        <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span id="navegacion" class="navbar-toggler-icon"></span>
         </button>
 
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Inicio</a>
+                    <a id="navegacion" class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="trabajos.html">Trabajos</a>
+                    <a id="navegacion" class="nav-link" href="trabajos.html">Trabajos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    <a id="navegacion" class="nav-link" href="nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="servicios.html">Servicios</a>
+                    <a id="navegacion" class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a id="navegacion" class="nav-link" href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -58,49 +59,49 @@
     <main class="imagenes">
         <div class="sign">
             <span>t</span><span class="fast-flicker">r</span>ab<span class="flicker">a</span>jos
-          </div>
-        <div class= "margenTablet margenDesktop">
-        <div class="galeria">
-            <img class="trabajos img1" src="img/sanderors.jpg" alt="sandero rs">
-            <img class="trabajos img2" src="img/sanderors2.jpg" alt="sandero 2">
-            <img class="trabajos img3" src="img/sanderors3.jpg" alt="sandero 3">
-            <img class="trabajos img4" src="img/sanderors4.jpg" alt="sandero 4">
-            <img class="trabajos img5" src="img/sanderors5.jpg" alt="sandero 5">
-            <img class="trabajos img6" src="img/gol.jpg" alt="gol">
-            <img class="trabajos img7" src="img/gol2.jpg" alt="gol">
-            <img class="trabajos img8" src="img/gol3.jpg" alt="gol">
-            <img class="trabajos img9" src="img/golnegro.jpg" alt="gol negro">
-            <img class="trabajos img10" src="img/golnegro2.jpg" alt="gol negro">
-            <img class="trabajos img11" src="img/golnegro3.jpg" alt="gol negro">
-            <img class="trabajos img12" src="img/golnegro4.jpg" alt="gol negro">
-            <img class="trabajos img13" src="img/voyage.jpg" alt="voyage">
-            <img class="trabajos img14" src="img/voyage2.jpg" alt="voyage">
-            <img class="trabajos img15" src="img/voyage3.jpg" alt="voyage">
         </div>
-    </div>
+        <div class="margenTablet margenDesktop">
+            <div class="galeria">
+                <img class="trabajos img1" src="img/sanderors.jpg" alt="sandero rs">
+                <img class="trabajos img2" src="img/sanderors2.jpg" alt="sandero 2">
+                <img class="trabajos img3" src="img/sanderors3.jpg" alt="sandero 3">
+                <img class="trabajos img4" src="img/sanderors4.jpg" alt="sandero 4">
+                <img class="trabajos img5" src="img/sanderors5.jpg" alt="sandero 5">
+                <img class="trabajos img6" src="img/gol.jpg" alt="gol">
+                <img class="trabajos img7" src="img/gol2.jpg" alt="gol">
+                <img class="trabajos img8" src="img/gol3.jpg" alt="gol">
+                <img class="trabajos img9" src="img/golnegro.jpg" alt="gol negro">
+                <img class="trabajos img10" src="img/golnegro2.jpg" alt="gol negro">
+                <img class="trabajos img11" src="img/golnegro3.jpg" alt="gol negro">
+                <img class="trabajos img12" src="img/golnegro4.jpg" alt="gol negro">
+                <img class="trabajos img13" src="img/voyage.jpg" alt="voyage">
+                <img class="trabajos img14" src="img/voyage2.jpg" alt="voyage">
+                <img class="trabajos img15" src="img/voyage3.jpg" alt="voyage">
+            </div>
+        </div>
     </main>
     <div id="whatsapp">
         <a href="https://wa.me/+5493516974598" target="_blank"><i id="iconowhatsapp"
                 class="fa-brands fa-whatsapp"></i></a>
     </div>
+
     <footer>
 
-        <footer>
+        <div class="redes">
+            <a href="https://www.facebook.com/JVshinecardetail" target="_blank"><i
+                    class="fa-brands fa-facebook-square"></i></a>
+            <a href="https://www.instagram.com/jv_shine.car.detail/" target="_blank"><i
+                    class="fa-brands fa-instagram-square"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+        </div>
+        <div class="bloquemapa">
+            <h3><i class="fa-solid fa-location-dot"></i> Juan Casacuberta, 2953.</h3>
+            <iframe class="mapa"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.5967141857936!2d-64.17090798255614!3d-31.37010619999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329835c810c20b%3A0x430d209e924d3759!2sJuan%20Casacuberta%202953%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1648126119844!5m2!1ses!2sar"
+                width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
 
-            <div class="redes">
-                <a href="https://www.facebook.com/JVshinecardetail" target="_blank"><i
-                        class="fa-brands fa-facebook-square"></i></a>
-                <a href="https://www.instagram.com/jv_shine.car.detail/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
-                <a href=""><i class="fa-brands fa-youtube"></i></a>
-            </div>
-            <div class="bloquemapa">
-                <h3><i class="fa-solid fa-location-dot"></i> Juan Casacuberta, 2953.</h3>
-                <iframe class="mapa"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.5967141857936!2d-64.17090798255614!3d-31.37010619999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329835c810c20b%3A0x430d209e924d3759!2sJuan%20Casacuberta%202953%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1648126119844!5m2!1ses!2sar"
-                    width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-    
-        </footer>
+    </footer>
     <p class="derechos">Todos los derechos reservados.</p>
     <!--inicio separate-->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
